traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:2: error: not found: value getLargeur
  for (y <- 0 to getLargeur()-1) {
                 ^TraversalByLine:3: error: not found: value getHauteur
    for (x <- 0 to getHauteur()-1) {
                   ^