traversal.line.traversalbyline.TraversalByLine.scala.code
override def run() {
  var i = 0
  for (y <- 0 to getLargeur()-1) {
    for (x <- 0 to getHauteur()-1) {
      setPos(x,y)
      i+= 1
      ecritMessage(i)
    }
  }
}